--- a/templates/index.html
+++ b/templates/index.html
@@ -10,12 +10,11 @@
 
 
   <!-- This is the 'importing' of external libraries. -->
-      <link rel="stylesheet" type="text/css" href="/static/styles.css">
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
-  <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="crossorigin="anonymous"></script>
-
-
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+    <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/static/styles.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="crossorigin="anonymous"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.7.0/moment.min.js" type="text/javascript"></script>
 
   <style>
       html, body {height:100vh; margin: 0;}
@@ -56,7 +55,6 @@
             </div>
             <hr>
             <div id="load_inspection">
-                View the load here
                 <!-- Chart goes here in this div -->
                 <div class="ct-chart2 ct-perfect-fourth"></div>
                 <!-- This is the script.js that's in 'static' folder - it loads the chart data and draws the chart. -->
