--- a/templates/index.html
+++ b/templates/index.html
@@ -15,22 +15,28 @@
     <link rel="stylesheet" type="text/css" href="/static/styles.css">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="crossorigin="anonymous"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.7.0/moment.min.js" type="text/javascript"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
 
   <style>
-      html, body {height:100vh; margin: 0;}
-      #container {min-width: 1000px; height:100vh; margin: 0; background-color: #EEEEEE;}
-      .main {height:100vh;}
-      #logos{height:4vh; padding-left:5px;}
-      #left_column { width:34%; float:left; height:95vh;}
-      #right_column { float:right; width:66%; height:100vh;}
-      #load_panel{ width:92%; height:92.5vh;}
-      #load_selection { height:40vh;}
-      #load_inspection { height:50vh;}
-      #tariff_selection_panel { height:40vh; }
-      #results_panel { height:55vh; }
-      #result_chart  { height:40vh; width: 50%}
+      html, body {height:100%; margin: 0;}
+      #container {min-width: 100%; height:100vh; margin: 0; background-color: #EEEEEE;}
+      .main {height:100%;}
+      #logos{height:4%; padding-left:5px;}
+      #left_column { width:34%; float:left; height:95%;}
+      #right_column { float:right; width:66%; height:100%;}
+      #load_panel{ width: 92%; height: 92.5%;}
+      #load_selection { height: 10%; min-height: 10%; }
+      #select { width: 10vw; height: 2.2vh; font-size: 1.5vh}
+      #demograhphic_selection {height: 50%; min-height: 50%; }
+      #load_inspection { height: 40%; min-height: 40%; }
+      #tariff_selection_panel { height:40%; }
+      #results_panel { height:55 %; }
+      #result_chart  { height:40 %; width: 50%}
+      .ct-chart  .ct-line {stroke: blue; stroke-width: 1px}
+      .load-chart { height: 100%; min-height: 100%; }
+      .demo_select_container { float: right; width: 40% !important; height: 2.5vh; clear: right}
+      .select_demo{width: 10vw; height: 2.2vh; font-size: 1.5vh; position:relative}
+      .select_demo:focus{height:auto; z-index:1}
+      .demo_label { height: 2.5vh; font-size: 1.5vh; float: left; clear: left}
   </style>
 
 </head>
@@ -46,7 +52,6 @@
             <img src="static/CEEMLogo.png" alt="UNSW Logo" width="205", style="float:left">
             <img src="static/UNSWLogo.png" alt="UNSW Logo" width="90">
         </div>
-
         <fieldset id="load_panel">
             <legend>Select Load:</legend>
             <div id="load_selecion">
@@ -56,61 +61,62 @@
             </div>
             <hr>
             <div id="demograhphic_selection">
-                <div id="demo_0" >
-                    <span id="demo_label_0"></span>
-                    <select class="js-example-basic-multiple" id="demo_select_0" multiple="multiple" ></select>
+                <span id="demo_label_0" class="demo_label"></span>
+                <div id="demo_0" class="demo_select_container">
+                    <select  id="demo_select_0" class="select_demo" multiple ></select>
                 </div>
                 <script> $('#demo_0').hide() </script>
-                <div id="demo_1" >
-                    <span id="demo_label_1"></span>
-                    <select class="js-example-basic-multiple" id="demo_select_1" multiple="multiple" ></select>
+                <span id="demo_label_1"  class="demo_label"></span>
+                <div id="demo_1" class="demo_select_container">
+                    <select class="select_demo" id="demo_select_1" multiple ></select>
                 </div>
                 <script> $('#demo_1').hide() </script>
-                <div id="demo_2" >
-                    <span id="demo_label_2"></span>
-                    <select class="js-example-basic-multiple" id="demo_select_2" multiple="multiple" ></select>
+                <span id="demo_label_2" class="demo_label"></span>
+                <div id="demo_2" class="demo_select_container">
+                    <select  id="demo_select_2" class="select_demo" multiple ></select>
                 </div>
                 <script> $('#demo_2').hide() </script>
-                <div id="demo_3" >
-                    <span id="demo_label_3"></span>
-                    <select class="js-example-basic-multiple" id="demo_select_3" multiple="multiple" ></select>
+                <span id="demo_label_3"  class="demo_label"></span>
+                <div id="demo_3" class="demo_select_container">
+                    <select  id="demo_select_3" class="select_demo" multiple ></select>
                 </div>
                 <script> $('#demo_3').hide() </script>
-                <div id="demo_4" >
-                    <span id="demo_label_4"></span>
-                    <select class="js-example-basic-multiple" id="demo_select_4" multiple="multiple" ></select>
+                <span id="demo_label_4"  class="demo_label"></span>
+                <div id="demo_4" class="demo_select_container">
+                    <select  id="demo_select_4" class="select_demo" multiple ></select>
                 </div>
                 <script> $('#demo_4').hide() </script>
-                <div id="demo_5" >
-                    <span id="demo_label_5"></span>
-                    <select class="js-example-basic-multiple" id="demo_select_5" multiple="multiple" ></select>
+                <span id="demo_label_5" class="demo_label"></span>
+                <div id="demo_5" class="demo_select_container">
+                    <select  id="demo_select_5" class="select_demo" multiple ></select>
                 </div>
                 <script> $('#demo_5').hide() </script>
-                <div id="demo_6" >
-                    <span id="demo_label_6"></span>
-                    <select class="js-example-basic-multiple" id="demo_select_6" multiple="multiple" ></select>
+                <span id="demo_label_6" class="demo_label"></span>
+                <div id="demo_6" class="demo_select_container">
+                    <select  id="demo_select_6" class="select_demo" multiple ></select>
                 </div>
                 <script> $('#demo_6').hide() </script>
-                <div id="demo_7" >
-                    <span id="demo_label_7"></span>
-                    <select class="js-example-basic-multiple" id="demo_select_7" multiple="multiple" ></select>
+                <span id="demo_label_7" class="demo_label"></span>
+                <div id="demo_7" class="demo_select_container">
+                    <select  id="demo_select_7" class="select_demo" multiple ></select>
                 </div>
                 <script> $('#demo_7').hide() </script>
-                <div id="demo_8" >
-                    <span id="demo_label_8"></span>
-                    <select class="js-example-basic-multiple" id="demo_select_8" multiple="multiple" ></select>
+                <span id="demo_label_8"  class="demo_label"></span>
+                <div id="demo_8" class="demo_select_container">
+                    <select  id="demo_select_8" class="select_demo" multiple ></select>
                 </div>
                 <script> $('#demo_8').hide() </script>
-                <div id="demo_9" >
-                    <span id="demo_label_9"></span>
-                    <select class="js-example-basic-multiple" id="demo_select_9" multiple="multiple" ></select>
+                <span id="demo_label_9"  class="demo_label"></span>
+                <div id="demo_9" class="demo_select_container">
+                    <select  id="demo_select_9" class="select_demo" multiple ></select>
                 </div>
                 <script> $('#demo_9').hide() </script>
+
             </div>
             <hr>
             <div id="load_inspection">
                 <!-- Chart goes here in this div -->
-                <div class="ct-chart2 ct-perfect-fourth"></div>
+                <div class="ct-chart ct-perfect-fourth load-chart"></div>
                 <!-- This is the script.js that's in 'static' folder - it loads the chart data and draws the chart. -->
                 <script src="static/plot_load.js"></script>
             </div>
@@ -123,9 +129,7 @@
         <fieldset id="results_panel">
             <!-- Chart goes here in this div -->
             <div id="result_chart">
-            <div class="ct-chart ct-perfect-fourth"></div>
-            <!-- This is the script.js that's in 'static' folder - it loads the chart data and draws the chart. -->
-            <script src="static/script.js"></script>
+
             </div>
         </fieldset>
 
