load filter added

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
       #logos{height:4%; padding-left:5px;}
       #left_column { width:34%; float:left; height:95%;}
       #right_column { float:right; width:66%; height:100%;}
-      #load_panel{ width: 92%; height: 92.5%;}
+      #load_panel{ width: 92%; height: 98%;}
       #load_selection { height: 10%; min-height: 10%; }
       #select { width: 10vw; height: 2.2vh; font-size: 1.5vh}
       #demograhphic_selection {height: 50%; min-height: 50%; }
@@ -113,6 +113,7 @@
                 <script> $('#demo_9').hide() </script>
 
             </div>
+            <button type="button" class="get_filtered_load">Click Me!</button>
             <hr>
             <div id="load_inspection">
                 <!-- Chart goes here in this div -->
