--- a/templates/index.html
+++ b/templates/index.html
@@ -11,16 +11,19 @@
 
   <!-- This is the 'importing' of external libraries. -->
     <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+    <link href="static/contextMenu/contextMenu.css"  rel="stylesheet" type="text/css" />
     <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="crossorigin="anonymous"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.7.0/moment.min.js" type="text/javascript"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="static/contextMenu/contextMenu.js"></script>
+
 
   <style>
       html, body {height:100%; margin: 0;}
-      #container {width: 100vw; height:100vh; margin: 0; background-color: #EEEEEE;}
+      #container {width: 99.7vw; height:99.6vh; margin: 0; background-color: #EEEEEE;}
       .main {height:98%; width:98%; padding: 0.5%}
       #logos{height: 10%;}
       #left_column {width:35%; float:left; height:100%; clear: left;}
@@ -30,7 +33,7 @@
       #select {width: 30%; height: 2.2%; font-size: 1.5vh}
       #demograhphic_selection {height: 30%; min-height: 50%; }
       #load_inspection {height: 30vh;}
-      #load_chart {height: 80%;}
+      #load_chart {position: relative; height: 80%;}
       #tariff_selection_panel { height:44%; border-style: groove; border-width: 0.4vh;}
       #results_panel { height:55%; border-style: groove; border-width: 0.4vh;}
       #result_chart  { height:40%; width: 50%}
@@ -40,27 +43,23 @@
       .select_demo{width: 10vw; height: 2.2vh; font-size: 1.5vh; position:relative}
       .select_demo:focus{height:auto; z-index:1}
       .demo_label { height: 2.5vh; font-size: 1.5vh; float: left; clear: left}
-      .loader {position: relative;}
+      #chart_loading_message {position: absolute; top: 50%; left: 50%; height: 30%; width: 50%; margin: -15% 0 0 -25%;}
 
-                .loader div{
-                    border: 16px solid #f3f3f3; /* Light grey */
-                    border-top: 16px solid #3498db; /* Blue */
-                    border-radius: 50%;
-                    width: 120px;
-                    height: 120px;
-                    animation: spin 2s linear infinite;
-                }
-
-                @keyframes spin {
-                    0% { transform: rotate(0deg); }
-                    100% { transform: rotate(360deg); }
-                }
   </style>
 
 </head>
 
+<div id="popupMenu">Please wait. Loading . . .
+<br><br>
+<span class="popupClose">OK</span>
+</div>
+
 <body>
 <div id="container">
+  <div class="menu_bar">
+      <button type="button" class="project_menu" id="projectmenu">Project</button>
+       <script src="static/menu.js"></script>
+  </div>
   <div class="main">
     <div id="left_column">
         <div id="logos">
@@ -73,7 +72,7 @@
                 <span style="font-size: 1.5vh">Selected:</span>
                 <select id="select" name="select" ><option selected="selected">blank</option></select>
                 <script src="static/build_load_selector.js"></script>
-                <button type="button" class="get_load" style="float: right; width: 15% !important;
+                <button type="button" id="get_load" style="float: right; width: 15% !important;
                 height: 2.5vh; font-size: 1.5vh;" >Set</button>
             </div>
             <hr>
@@ -141,13 +140,8 @@
                 </div>
                 <!-- Chart goes here in this div -->
                 <div class="chart" id="load_chart">
-                    <div id="loader">
-                        <div>
-
-                        </div>
-                    </div>
+                    <div id="chart_loading_message"></div>
                 </div>
-
                 <script src="static/plot_load.js"></script>
                 <!-- This is the script.js that's in 'static' folder - it loads the chart data and draws the chart. -->
             </div>
