--- a/templates/index.html
+++ b/templates/index.html
@@ -32,20 +32,22 @@
                   box-sizing: border-box; position: relative; top: 2%;}
       #load_selection {height: 10%; min-height: 10%; width: 35vw}
       #select {width: 30%; height: 2.2%; font-size: 1.5vh}
-      #demograhphic_selection {height: 30%; min-height: 50%; }
+      #demograhphic_selection {height: 30%; min-height: 50%;}
       #load_inspection {height: 37%;}
       #load_chart {position: relative; height: 90%;}
       #tariff_selection_panel {height:37%; border-style: groove; border-width: 0.5%; padding: 2%;
-                               box-sizing: border-box; position: relative; top: 2%;}
+                               box-sizing: border-box; position: relative; top: 2%; width: 100%}
+      #tariff_selection_panel:after { content: ""; display: table; clear: both; }
       .tariff_panel_cols {float: left;}
-      #left_tariff_col {width: 20 %}
-      #right_tariff_col { width: 80 %}
+      #left_tariff_col {width: 13%; height: 100%;}
+      #middle_tariff_col { width: 20%; height: 100%;}
+      #right_tariff_col { width: 67%; height: 100%;}
       #results_panel {height:61%; border-style: groove; border-width: 0.5%; padding: 0.5%; box-sizing: border-box;}
       #result_chart  {height:40%; width: 50%}
       #sample_size_info{font-size: 2vh;}
       #select_graph{font-size: 2vh;}
-      .demo_select_container { float: right; width: 40% !important; height: 2.5vh; clear: right}
-      .select_demo{width: 10vw; height: 2.2vh; font-size: 2vh; position:relative}
+      .demo_select_container { float: right; width: 25% !important; height: 2.5vh; clear: right;}
+      .select_demo{width: 100% !important; height: 2.2vh; font-size: 2vh;}
       .select_demo:focus{height:auto; z-index:1}
       .demo_label { height: 2.5vh; font-size: 2vh; float: left; clear: left}
       #chart_loading_message {position: absolute; top: 50%; left: 50%; height: 30%; width: 50%; margin: -15% 0 0 -25%;}
@@ -57,13 +59,65 @@
       #tariff_selection_panel h3 { position: absolute; top: 0; font-size: 2hv; line-height: 1;
                        margin: -9px 0 0; /* half of font-size */ background: #EEEEEE; padding: 0 3px;}
       .standard_label {height: 5vh; font-size: 2vh; display: block;}
+      .tariff_selectors {height: 3vh; font-size: 2vh; display: block; width: 80%;}
+      .inter_selector_padder{height: 2vh;}
+      #popupMenu2 { width: 150px; height: 80px; background: #EEEEEE; font-size: 16px; display: none; font-size: 12px;
+                   border-color: #5D8FAF; text-align: center; }
+      #close_button:hover {background: #FF0000; color: #EEEEEE}
+      #tariff_panel_header {height: 10%}
+      /* Style the tab */
+       .tab {
+        overflow: hidden;
+        background-color: #f1f1f1;
+        height: 10%;
+        }
+
+        /* Style the buttons that are used to open the tab content */
+        .tab button {
+        background-color: inherit;
+        float: left;
+        border-style: solid;
+        border-width: 1px;
+        height: 100%;
+        font-size: 2vh;
+        }
+
+        /* Change background color of buttons on hover */
+        .tab button:hover {
+        background-color: #ddd;
+        }
+
+        /* Create an active/current tablink class */
+        .tab button.active {
+        background-color: #ccc;
+        }
+
+        /* Style the tab content */
+        .tabcontent {
+        display: none;
+        border-style: groove;
+        border-width: 0.25%;
+        height: 80%;
+        box-sizing: border-box;
+        padding: 1%;
+        width: 100%;
+        }
+
+        #duos_header {width: 100%; height:20%;}
 
   </style>
 
-  <div id="popupMenu">Please wait. Loading . . .
-<br><br>
-<span class="popupClose">OK</span>
-</div>
+  <div id="popupMenu2">
+    <div style="height: 20px; background: #dde0e5;">
+        <span id="close_button" class="popupClose"
+              style="font-size: 20px; float: right; text-align: center; width: 20px; height:20px;">&times</span>
+    </div>
+      <hr style="height:1px ;padding-top:0;margin-top:0;margin-bottom:0;box-sizing: border-box;" />
+    <br><br>
+      <div style="position: absolute; top: 42px; left: 18px;">Please wait. Loading . . .</div>
+
+  </div>
+
 </head>
 
 <body>
@@ -174,14 +228,69 @@
 
         <div id="tariff_selection_panel">
             <h3 style="font-size: 1.5vh">Select Tariff:</h3>
-            <div id="left_tariff_col">
+            <div id="left_tariff_col"  class="tariff_panel_cols">
                 <span class="standard_label">Type:</span>
                 <span class="standard_label">State:</span>
                 <span class="standard_label">Provider:</span>
                 <span class="standard_label">Year:</span>
                 <span class="standard_label">Tariff:</span>
             </div>
-            <div id="right_tariff_col"></div>
+            <div id="middle_tariff_col" class="tariff_panel_cols">
+                <select class="tariff_selectors" id="select_tariff_type" >
+                    <option selected="selected">blank</option>
+                </select>
+                <div class="inter_selector_padder"></div>
+                <select class="tariff_selectors" id="select_tariff_state" >
+                    <option selected="selected">blank</option>
+                </select>
+                <div class="inter_selector_padder"></div>
+                <select class="tariff_selectors" id="select_tariff_Provider" >
+                    <option selected="selected">blank</option>
+                </select>
+                <div class="inter_selector_padder"></div>
+                <select class="tariff_selectors" id="select_tariff_Year" >
+                    <option selected="selected">blank</option>
+                </select>
+                <div class="inter_selector_padder"></div>
+                <select class="tariff_selectors" id="select_tariff" >
+                    <option selected="selected">blank</option>
+                </select>
+            </div>
+            <div id="right_tariff_col" class="tariff_panel_cols">
+                <script src="static/tariff_tabs.js"></script>
+                <div id="tariff_panel_header">
+                    <div style="width: 25%; float: left;">Name: N/A</div>
+                    <div style="width: 25%; float: left;">Type: N/A</div>
+                    <div style="width: 25%; float: left;">State: N/A</div>
+                    <div style="width: 25%; float: left;"><button>Add</button></div>
+                </div>
+                <div id="tariff_tabs" class="tab">
+                    <button id="default_tab" class="tablinks" onclick="displayTariff(event, 'DUOS')">DUOS</button>
+                    <button class="tablinks" onclick="displayTariff(event, 'TUOS')">TUOS</button>
+                    <button class="tablinks" onclick="displayTariff(event, 'DUOS_TUOS')">DUOS+TUOS</button>
+                    <button class="tablinks" onclick="displayTariff(event, 'NUOS')">NUOS</button>
+                </div>
+                <div id="DUOS" class="tabcontent" style="width: 100%;">
+                    <div id="duos_header">
+                        <div style="float: left;">Daily Charge ($/day):</div>
+                        <input id="duos_daily_charge" type="text" value="" style="width: 10%; float: left;">
+                        <div style="float: left; padding-left: 5%">Energy Charge ($/kWh):</div>
+                        <input id="duos_energy_charge" type="text" value=""  style="width: 10%; float: left;">
+                    </div>
+                    <br>
+                    <div>DUOS</div>
+                </div>
+                <div id="TUOS" class="tabcontent">
+                    TUOS
+                </div>
+                <div id="DUOS_TUOS" class="tabcontent">
+                    DUOS+TUOS
+                </div>
+                <div id="NUOS" class="tabcontent">
+                    NUOS
+                </div>
+                <script>document.getElementById("default_tab").click();</script>
+            </div>
         </div>
 
     </div>
